<resources>
    <string name="app_name">Reward</string>

    <string name="nav_history">历史</string>
    <string name="nav_statistic">统计</string>
    <string name="nav_backup">备份</string>
    <string name="nav_restore">恢复</string>
    <string name="community">社区</string>

    <string name="desc">描述</string>
    <string name="title">标题</string>
    <string name="amount">价值</string>
    <string name="task">任务</string>
    <string name="wish">心愿</string>
    <string name="empty_task_text">还没有任务，新建一个吧</string>
    <string name="empty_wish_text">还没有心愿，新建一个吧</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="cancel_task">取消任务</string>
    <string name="cancel_wish">删除心愿</string>
    <string name="finish_task">完成任务</string>
    <string name="finish_wish">实现心愿</string>

    <string name="credits_text">现有积分</string>

    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="close">关闭</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="tools">工具</string>
    <string name="send">反馈</string>
    <string name="other">其他</string>
    <string name="info">关于</string>
    <string name="more">更多</string>
</resources>
